crates/bevy_reflect_compile_fail_tests/tests/type_uuid_derive/derive_type_uuid.rs
use bevy_reflect::TypeUuid;

fn main() {}

// Missing #[uuid] attribute
#[derive(TypeUuid)]
struct A;

// Malformed attribute
#[derive(TypeUuid)]
#[uuid = 42]
struct B;

// UUID parse fail
#[derive(TypeUuid)]
#[uuid = "000"]
struct C;
